ruka-lang.org/src/lib/interpreter/fixtures/type-err/missing-record-field.ruka
// expect: missing field
let Point = record { x: int, y: int }
let main = () do
    let p: Point = .{ x = 1 }
end
